++++++++++++
FCTX Changes
++++++++++++

Whats new in FCTX 1.6.0
-----------------------

 - ENH: New fct_chk_ex will check that a C++ exception is generated within 
   a code block. Only in C++. 


Whats new in FCTX 1.5.0
-----------------------

This release focused on a rework of the fct_req check to allow it to
abort a test suite if a setup or teardown check fails. This involved
some disruptive work to the test suite structure, and warrants a
release on its own. The change should be backwards compatible.

 - ENH: fct_req will now abort a test suite if it fails in a setup and
   teardown block. 

Whats new in FCTX 1.4.2
-----------------------

Many thanks to suggestions from Rhys Ulerich (http://github.com/RhysU)
for his patches to make FCTX better.

 - ENH: Ability to use fct_chk in an if conditional. You can then
   conditionally execute further checks based on the first check.
 - ENH: Allow user to mutate main's argv (useful for initializing
   libraries. Thanks to RhysU.
 - FIX: Fix to handle simple unit test case (catches segmentation
   fault).
 - FIX: Warning corrections for GCC 4.3.4, Intel 11.1. Thanks to
   RhysU.
 - FIX: DOC - Updated Getting Started sample to use FCT_QTEST_END.
   Thanks to RhysU for the fix.

Whats new in FCTX 1.4.1
-----------------------

 - FIX: Compiler regression with MSV compilers. FCTX should be back to
   compiling for the MSVC.

Whats new in FCTX 1.4.0
-----------------------

 - ENH: Custom logger. You can now write and install a customized
   logger. See the examples/custom_logger directory within the source
   for details.
 - ENH: Test and Test Suites grow their own duration value. Getting the
   time for a particular test or test suite is a common logging
   operation. In order to simplify logging the test and test suite
   objects will now take care to report their durations.
 - FIX: Fix warnings generated for a "blank test" (i.e. "FCT_BGN() {}
   FCT_END()").

Whats new in FCTX 1.3.2
-----------------------
